--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -82,13 +82,13 @@ body{
 @keyframes animate {
 
 
-   0%,18%,20%,50.1%,60%,65.1%,80%,90.1%,92%
+   0%,18%,20%,50.1%,60%,65.1%,80%,95.1%,100%
 
 
    {
 
 
-       color: #0e3742;
+       color: tomato;
 
 
        text-sizing: none;
@@ -97,13 +97,13 @@ body{
    }
 
 
-   10.1%,20.1%,30%,50%,60.1%,65%,80.1%,90%,92.1%,100%
+   10.1%,20.1%,30%,50%,60.1%,65%,80.1%,90%,92.1%,120%
 
 
    {
 
 
-       color: #fff;
+       color:crimson;
 
 
        text-shadow: 0 0 10px #0ebcf4,
