--- a/src/components/Course_view/Course_view.css
+++ b/src/components/Course_view/Course_view.css
@@ -1,5 +1,5 @@
 .view{
-    background-color: gray;
+    background-color: lightblue;
     display: flex;
     justify-content: space-around;
     text-align: center;
